--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -4,8 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="30dp"
+    android:layout_marginBottom="50dp"
+    android:background="#00FFFFFF"
     android:calendarViewShown="false"
-    android:gravity="center"
+    android:gravity="center|left"
     android:orientation="vertical"
     tools:context=".ReportActivity">
 
@@ -23,11 +26,18 @@
             tools:layout_editor_absoluteX="54dp"
             tools:layout_editor_absoluteY="118dp" />
 
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="234dp"
         android:layout_height="78dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
@@ -51,8 +61,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="280dp"
-        android:layout_height="76dp"
+        android:layout_width="364dp"
+        android:layout_height="74dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
@@ -69,8 +80,6 @@
             android:layout_width="284dp"
             android:layout_height="81dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginStart="136dp"
-            android:layout_marginTop="256dp"
             android:calendarViewShown="false"
             android:datePickerMode="spinner"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,8 +88,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
@@ -92,27 +103,30 @@
             tools:layout_editor_absoluteX="37dp"
             tools:layout_editor_absoluteY="427dp" />
 
+        <ImageButton
+            android:id="@+id/ReportActivity_uploadPhoto_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:background="#00FFFFFF"
+            app:srcCompat="@android:drawable/ic_menu_upload_you_tube" />
+
         <ImageView
             android:id="@+id/ReportActivity_uploadphoto_imageView"
-            android:layout_width="176dp"
-            android:layout_height="154dp"
-            tools:layout_editor_absoluteX="131dp"
-            tools:layout_editor_absoluteY="367dp"
+            android:layout_width="158dp"
+            android:layout_height="84dp"
+            android:layout_weight="1"
             tools:srcCompat="@tools:sample/avatars" />
 
-        <Button
-            android:id="@+id/ReportActivity_uploadPhoto_Button"
-            android:layout_width="84dp"
-            android:layout_height="41dp"
-            android:text="사진첨부"
-            tools:layout_editor_absoluteX="311dp"
-            tools:layout_editor_absoluteY="480dp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/ReportActivity_report_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="50dp"
         android:text="신고등록하기"
         tools:layout_editor_absoluteX="257dp"
         tools:layout_editor_absoluteY="643dp" />
