데베에서 가져오는거 했음 근데 리스트에 뿌리는 부분 고쳐야함

--- a/app/src/main/res/layout/activity_report_list.xml
+++ b/app/src/main/res/layout/activity_report_list.xml
@@ -12,6 +12,7 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="409dp"
         android:layout_height="729dp"
         tools:layout_editor_absoluteX="1dp"
