팝업창 성공

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,19 +18,19 @@
         tools:layout_editor_absoluteY="84dp" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:layout_width="match_parent"
+        android:layout_height="318dp"
+        android:orientation="vertical">
 
         <com.google.android.gms.common.SignInButton
-            android:id="@+id/LoginActivity_login_Button"
-            android:layout_width="242dp"
-            android:layout_height="81dp"
+            android:id="@+id/LoginActivity_login_GoogleButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:background="#C6CECECE"
-            android:text="로그인" />
+            android:text="로그인">
+
+        </com.google.android.gms.common.SignInButton>
 
     </LinearLayout>
 
