--- a/app/src/main/res/layout/commupost__item.xml
+++ b/app/src/main/res/layout/commupost__item.xml
@@ -19,6 +19,13 @@
             android:text="TextView"
             android:textSize="18sp" />
 
+        <TextView
+            android:id="@+id/content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:text="TextView" />
+
         <ImageButton
             android:id="@+id/uploadBtn"
             android:layout_width="wrap_content"
