--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFDDA0DD</color>
-    <color name="colorPrimaryDark">#FFDDA0DD</color>
+    <color name="colorPrimary">#CACACA</color>
+    <color name="colorPrimaryDark">#CACACA</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
