--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="30dp"
-    android:layout_marginBottom="50dp"
+    android:layout_margin="30dp"
     android:background="#00FFFFFF"
     android:calendarViewShown="false"
     android:gravity="center|left"
