--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -14,6 +14,8 @@
     <LinearLayout
         android:layout_width="234dp"
         android:layout_height="78dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="40dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -40,6 +42,8 @@
     <LinearLayout
         android:layout_width="364dp"
         android:layout_height="74dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="40dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -67,7 +71,8 @@
     <LinearLayout
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="40dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -104,7 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="50dp"
-        android:text="신고등록하기"
+        android:text="신고 등록하기"
         tools:layout_editor_absoluteX="257dp"
         tools:layout_editor_absoluteY="643dp" />
 
